# vulture-gui

./: .gitignore  .gitmodules  CHANGELOG  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ruff.yml
etc/rc.conf.d/: shellinaboxd
vulture_os/: manage.py
vulture_os/api_collector/: apps.py  utils.py  views.py
vulture_os/applications/: apps.py  exceptions.py  generic_delete.py  generic_list.py
vulture_os/authentication/: authentication.py  base_repository.py  exceptions.py  generic_delete.py  generic_list.py  portal.py
vulture_os/daemons/: cluster.py  monitor.py  reconcile.py  tasks.py
vulture_os/darwin/: darwin.py  generic_delete.py  generic_list.py
vulture_os/darwin/policy/: api.py  (+4 more)
vulture_os/documentation/: urls.py  views.py
vulture_os/gui/: context_processors.py  urls.py
vulture_os/portal/: middleware.py  settings.py  urls.py  wsgi.py
vulture_os/security/: generic_delete.py  generic_list.py  security.py
vulture_os/services/: apps.py  exceptions.py  generic_delete.py  generic_list.py  models.py  service.py
vulture_os/system/: exceptions.py  generic_delete.py  generic_list.py  system.py
vulture_os/templates/: generic_delete.html  header.html  layout2.html  sidebar2.html
vulture_os/testing/: config.py  settings_test.py  testing_client.py
vulture_os/tests/: settings.py
vulture_os/vulture_os/: celery.py  settings.py  settings_mysoc.py  test_settings.py  urls.py  wsgi.py
vulture_os/workflow/: api.py  exceptions.py  form.py  generic_delete.py  generic_list.py  models.py  urls.py  views.py  workflow.py
(+1126 files in other folders)
