[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulture-gui"
version = "0.0.1"
description = "Web GUI for VultureOS"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "django~=4.2.0",
  "djongo[json] @ https://github.com/VultureProject/djongo/archive/refs/heads/release/1.3.7.2.zip",
  "pymongo",
  "jinja2",
  "iptools",
  "django-crontab",
  "django-environ",
  "requests",
  "pyOpenSSL",
  "redis~=4.5",
  "cryptography",
  "python-ldap~=3.3",
  "authy",
  "pyotp",
  "qrcode",
  "captcha",
  "beautifulsoup4",
  "robobrowser",
  "python-magic",
  "kerberos",
  "pyrad",
  "maxminddb",
  "validators",
  "pyfaup @ https://github.com/VultureProject/faup/archive/refs/tags/v1.5.2.zip#egg=pyfaup&subdirectory=src/lib/bindings/python/",
  # API parsers
  "boto3",
  "edgegrid-python",
  "meraki",
  "requests-oauthlib",
  "gunicorn",
  "pyjwt ~= 2.3",
  "websocket-client ~= 1.3.2",
  "google-auth",
  "google-api-python-client",
  "sophos-central-siem-integration @ https://github.com/VultureProject/Sophos-Central-SIEM-Integration/archive/refs/heads/add_setup-py.zip",
  "defusedxml",
  "xmltodict",
]
